--- a/beeTwinproject/package.json
+++ b/beeTwinproject/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify-build": "rm -f pnpm-lock.yaml && npm install && npm run build"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.2",
