--- a/beeTwinproject/package.json
+++ b/beeTwinproject/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "google-auth-library": "^10.1.0",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "moment": "^2.29.4",
