BeeTwin Sistem Entegrasyonu Tamamlandı (6 Ağustos 2025)
 TAMAMLANAN ÖZELLIKLER:

 Kimlik Doğrulama Sistemi:
- AuthContext.jsx: Tam kayıt/giriş sistemi
- JWT token ile kalıcı oturum yönetimi
- WelcomingPage.jsx: Manuel donanım eşleme entegrasyonu

 Backend API Altyapısı:
- MongoDB Sensor modeli genişletildi
- LoRa veri işleme endpoint'leri (/api/lora/data)
- Socket.IO WebSocket servisi
- Router/Sensor benzersizlik kontrolleri

 LoRa Veri İletişimi:
- pc_coordinator_text.py: Koordinatör-Backend iletişimi
- Sensor enum değerleri: co, no2, pressure, altitude
- Gerçek zamanlı veri alımı (Router 107/108)

 Dashboard Arayüzü:
- DashboardCard03/06: Null safety fixes
- Real-time sensor data entegrasyonu
- Router durumu görselleştirmesi

 Manuel Donanım Yapılandırması:
- MultiRouterHiveForm: 4-router sistem desteği
- HiveHardwareMappingForm: Manuel ID giriş sistemi
- Router/Sensor ID rehber sistemleri

 Database Yönetimi:
- Otomatik migration script'leri
- Test user creation tools
- Database cleanup utilities

 Geliştirme Araçları:
- Çoklu router API dokümantasyonu
- WebSocket service optimizasyonları
- Environment configuration files

 AKTIF SİSTEM DURUMU:
- Frontend:  Tam fonksiyonel
- Backend:  LoRa veri alımı aktif
- Database:  Proper sensor mappings
- WebSocket:  Real-time communication
- Authentication:  JWT token sistemi

 PROJENİN GENEL DURUMU:
- Core functionality: %80 tamamlandı
- Sensor data processing: Optimize edildi
- User registration with hardware mapping: Çalışıyor
- Real-time data display: İyileştirildi

 SONRAKI ADIMLAR:
- WebSocket fine-tuning
- Advanced ML analytics
- Mobile responsive optimizations

--- a/backend/.env.coordinator
+++ b/backend/.env.coordinator
@@ -9,3 +9,4 @@ GOOGLE_CLIENT_ID=your-google-client-id-here
 # Serial Port Ayarları (Coordinator Arduino)
 SERIAL_PORT=COM4
 SERIAL_BAUD_RATE=9600
+ENABLE_SERIAL_READER=false  # false = Coordinator ayrı çalışabilir
