--- a/beeTwinproject/package.json
+++ b/beeTwinproject/package.json
@@ -32,6 +32,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
