--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
+    "multer": "^2.0.2",
     "serialport": "^13.0.0",
     "socket.io": "^4.8.1"
   },
